--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
+    "@genkit-ai/firebase": "^1.16.1",
     "@genkit-ai/googleai": "^1.14.1",
     "@genkit-ai/next": "^1.14.1",
     "@getbrevo/brevo": "^3.0.1",
